@@ -1,32 +1,35 @@
-// src/main/java/org/mtvs/backend/checklist/service/CheckListService.java
 package org.mtvs.backend.checklist.service;
 
+import jakarta.transaction.Transactional;
 import org.mtvs.backend.auth.model.User;
-import org.mtvs.backend.auth.service.AuthService;
+import org.mtvs.backend.auth.repository.UserRepository;
 import org.mtvs.backend.checklist.dto.CheckListRequest;
 import org.mtvs.backend.checklist.dto.CheckListResponse;
 import org.mtvs.backend.checklist.model.CheckList;
 import org.mtvs.backend.checklist.repository.CheckListRepository;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
+
 @Service
 public class CheckListService {
-    private final CheckListRepository repo;
-    private final AuthService authService;
 
-    public CheckListService(CheckListRepository repo, AuthService authService) {
-        this.repo = repo;
-        this.authService = authService;
-    }
+    @Autowired
+    private UserRepository userRepo;
+    @Autowired
+    private CheckListRepository checkListRepo;
+    // 기존 repo, userRepo 주입 생략
 
-    public CheckListResponse create(String username, CheckListRequest req) {
-        // 1) 사용자 조회
-        User user = authService.findByUsername(username);
+    @Transactional
+    public CheckListResponse create(CheckListRequest req, String username) {
+        User user = userRepo.findByEmail(username)
+                .orElseThrow(() -> new UsernameNotFoundException(username));
 
-        // 2) 엔티티 생성
         CheckList entity = new CheckList();
         entity.setUser(user);
         entity.setMoisture(req.getMoisture());
@@ -34,21 +37,18 @@ public class CheckListService {
         entity.setSensitivity(req.getSensitivity());
         entity.setTension(req.getTension());
 
-        // 3) 저장
-        CheckList saved = repo.save(entity);
-
-        // 4) DTO 로 변환하여 반환
+        CheckList saved = checkListRepo.save(entity);
         return toDto(saved);
     }
 
-    public List<CheckListResponse> findAllForUser(String username) {
-        User user = authService.findByUsername(username);
-        return repo.findByUserOrderByCreatedAtDesc(user).stream()
-                .map(this::toDto)
-                .collect(Collectors.toList());
+    @Transactional
+    public List<CheckListResponse> findAllForCurrentUser(String username) {
+        User user = userRepo.findByEmail(username)
+                .orElseThrow(() -> new UsernameNotFoundException(username));
+        return checkListRepo.findByUserOrderByCreatedAtDesc(user)
+                .stream().map(this::toDto).toList();
     }
 
-    /** 엔티티 → DTO 변환 헬퍼 */
     private CheckListResponse toDto(CheckList e) {
         CheckListResponse dto = new CheckListResponse();
         dto.setId(e.getId());
@@ -60,6 +60,7 @@ public class CheckListService {
         return dto;
     }
 }
+
 
 
 
